# mini_gpsdo

./: .gitmodules  README.md
.github/workflows/: deploy.yml
configurator/: .postcssrc  package-lock.json  package.json  pnpm-lock.yaml
configurator/src/: index.html
configurator/src/js/: app.js  si5351.js
firmware/: .gitignore  .project  CMakeLists.txt  STM32G431CBUX_FLASH.ld
firmware/Drivers/stm32-si5351/: README.md
firmware/Drivers/stm32-si5351/si5351/: si5351.c  si5351.h
firmware/Sources/: gps.c  gps.h  gpsdo.c  gpsdo.h  gpsdo_averaging.c  gpsdo_averaging.h  main.c  ms5351.c  ms5351.h  settings.c  settings.h  stm32g4xx_hal_conf.h  syscalls.c  system_stm32g4xx.c  tusb_config.h  usb.c  usb_descriptors.c  usb_descriptors.h  usb_serial.c  webusb.c
hardware/: easyeda.kicad_sym  fp-lib-table  sym-lib-table  usb_si5351_gpsdo.kicad_pcb  usb_si5351_gpsdo.kicad_sch
hardware/easyeda.3dshapes/: SMA-TH_5P-L6.5-W6.5-H9.5_BWSMA-KE-P001.step
hardware/easyeda.pretty/: OSC-SMD_4P-L3.2-W2.5-BL.kicad_mod  SMA-SMD_BWSMA-KE-P001.kicad_mod  SOT-23-3_L2.9-W1.6-P1.90-LS2.8-BR.kicad_mod  SW-SMD_4P-L5.1-W5.1-P3.70-LS6.5-TL-2.kicad_mod  USB-C-SMD_TYPE-C16PIN.kicad_mod
hardware/jlcpcb/: project.db
hardware/jlcpcb/gerber/: usb_si5351_gpsdo-CuBottom.gbr  usb_si5351_gpsdo-CuTop.gbr  usb_si5351_gpsdo-EdgeCuts.gbr  usb_si5351_gpsdo-MaskBottom.gbr  usb_si5351_gpsdo-MaskTop.gbr  usb_si5351_gpsdo-NPTH.drl  usb_si5351_gpsdo-PTH.drl  usb_si5351_gpsdo-PasteBottom.gbr  usb_si5351_gpsdo-PasteTop.gbr  usb_si5351_gpsdo-SilkBottom.gbr  usb_si5351_gpsdo-SilkTop.gbr  usb_si5351_gpsdo-VScore.gbr
si5351_gpsdo/: .cproject  CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake
si5351_gpsdo/Sources/: gps.c  gps.h  main.c  ms5351.c  ms5351.h  stm32g4xx_it.c  syscalls.c  tusb_config.h  usb.c  usb.h  usb_descriptors.c
usb_si5351_gpsdo/: fp-info-cache  usb_si5351_gpsdo.kicad_pcb  usb_si5351_gpsdo.kicad_prl  usb_si5351_gpsdo.kicad_pro
usb_si5351_gpsdo/easyeda.3dshapes/: COMM-SMD_18P-L10.1-W9.7-P1.1-TL_L76-LB.step  COMM-SMD_18P-L10.1-W9.7-P1.1-TL_L76-LB.wrl  SMA-TH_5P-L6.5-W6.5-H9.5_BWSMA-KE-P001.wrl
usb_si5351_gpsdo/easyeda.pretty/: COMM-SMD_18P-L10.1-W9.7-P1.1-TL_L76-LB.kicad_mod
usb_si5351_gpsdo/jlcpcb/: project.db
usb_si5351_gpsdo/jlcpcb/gerber/: usb_si5351_gpsdo-CuBottom.gbr  usb_si5351_gpsdo-CuTop.gbr  usb_si5351_gpsdo-EdgeCuts.gbr  usb_si5351_gpsdo-MaskBottom.gbr  usb_si5351_gpsdo-MaskTop.gbr  usb_si5351_gpsdo-NPTH.drl  usb_si5351_gpsdo-PTH.drl  usb_si5351_gpsdo-PasteBottom.gbr  usb_si5351_gpsdo-PasteTop.gbr  usb_si5351_gpsdo-SilkBottom.gbr  usb_si5351_gpsdo-SilkTop.gbr  usb_si5351_gpsdo-VScore.gbr
usb_si5351_gpsdo/jlcpcb/production_files/: BOM-usb_si5351_gpsdo.csv  CPL-usb_si5351_gpsdo.csv
